bug alignement boutton

--- a/src/app/view-property/contact-modal/contact-modal.component.css
+++ b/src/app/view-property/contact-modal/contact-modal.component.css
@@ -51,7 +51,7 @@ button:disabled {
 
   @media screen and (max-width:992px) {
     .btn-outline-danger {
-     font-size: 0.45em !important;
+     font-size: 0.55em !important;
     }
   }
   
