--- a/src/app/view-property/modal-nodal/modal-nodal.component.css
+++ b/src/app/view-property/modal-nodal/modal-nodal.component.css
@@ -49,7 +49,7 @@
 
   @media screen and (max-width:992px) {
     .btn-outline-danger {
-     font-size: 0.45em !important;
+     font-size: 0.55em !important;
     }
   }
   
